--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "store-app",
-  "version": "0.1.0",
+  "name": "amazing-store",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.4.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
+    "bootstrap": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.4"
   },
   "scripts": {
@@ -33,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/christianoviana/store-app.git",
+  "author": "Jose Christiano <christiano.viana.junior@gmail.com>",
+  "license": "MIT"
 }
